Small UI tweaks

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <%= link_to Shoppe.settings.store_name, root_path, class: 'navbar-brand' %>
+      LiveSaverSoft Store
     </div>
     <% if current_order %>
       <ul class="nav navbar-nav pull-right">
