--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -3,7 +3,7 @@
 @import 'bootstrap/theme';
 
 .nav.navbar-nav.pull-right .basket {
-  background: transparent image-url('shopping-cart.png') no-repeat right top ;
+  background: transparent image-url('<%= asset_path 'shopping-cart.png' %>') no-repeat right top ;
   height: 50px;
   width: 61px;
 }
