--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
   </div>
 </div>
 
-<%= yield %>
-
+<div class="container">
+  <%= yield %>
+  <%= render 'layouts/footer' %>
+</div>
 </body>
 </html>
