--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,25 +1,39 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header shop-name">
-      LiveSaverSoft Store
+      <%= link_to 'LiveSaverSoft Store', root_path %>
     </div>
     <% if current_order %>
       <ul class="nav navbar-nav pull-right">
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <%= t('theme.header.lang') %>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <%= link_to 'En', change_locale_path(locale: 'en'), class: 'en' %>
+            </li>
+            <li>
+              <%= link_to 'Ua', change_locale_path(locale: 'ua'), class: 'ua' %>
+            </li>
+          </ul>
+        </li>
         <li class="dropdown">
           <a href="#" class="basket" data-toggle="dropdown"></a>
           <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="dropdownMenu1">
             <li role="presentation">
               <div class="container">
                 <p>
-                  You have <%= pluralize current_order.total_items, 'item'%> in your basket which cost
+                  <%= t('theme.header.total_items', count: current_order.total_items) %>
                   <%= number_to_currency current_order.total_before_tax %>.
                 </p>
-                <%= link_to 'Checkout', checkout_path, class:'btn btn-success' %>
+                <%= link_to t('buttons.checkout'), checkout_path, class:'btn btn-success' %>
               </div>
             </li>
             <li role="presentation" class="divider"></li>
             <li>
-              <%= link_to 'View basket', basket_path, class:'to-basket'  %>
+              <%= link_to t('buttons.view_basket'), basket_path, class:'to-basket'  %>
             </li>
           </ul>
           <span class="total_items"><%= current_order.total_items %></span>
