--- a/app/views/orders/confirmation.html.erb
+++ b/app/views/orders/confirmation.html.erb
@@ -1,3 +1,3 @@
-<h2>Place your order</h2>
+<h2><%= t('titles.place_order') %></h2>
 <%= render 'items', :order => current_order %>
-<%= button_to "Place order" %>
+<%= button_to t('buttons.place_order')%>
