--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,10 +12,10 @@
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
-              <%= link_to 'En', change_locale_path(locale: 'en'), class: 'en' %>
+              <%= link_to t('language.en'), { locale: 'en' }, class: 'en' %>
             </li>
             <li>
-              <%= link_to 'Ua', change_locale_path(locale: 'ua'), class: 'ua' %>
+              <%= link_to t('language.ua'), { locale: 'ua' }, class: 'ua' %>
             </li>
           </ul>
         </li>
