--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Products</h2>
+<h2><%= t('titles.products') %></h2>
 <% @products.each do |category, products| %>
   <h3><%= category.name %></h3>
     <% products.each_slice(3) do |array_of_three| %>
@@ -8,7 +8,7 @@
             <h4><%= link_to product.name, product_path(product.permalink) %></h4>
             <p><%= product.short_description %></p>
             <p><b>Price:</b> <%= number_to_currency product.price %></p>
-            <%= link_to 'View details »', product_path(product.permalink), class: 'btn btn-primary' %>
+            <%= link_to t('buttons.item_details'), product_path(product.permalink), class: 'btn btn-primary' %>
           </div>
         <% end %>
       </div>
