--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav id="navigation" class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header shop-name">
       <%= link_to 'LiveSaverSoft Store', root_path %>
