--- a/app/views/layouts/_footer.html
+++ b/app/views/layouts/_footer.html
@@ -1,4 +1,14 @@
 <hr class="featurette-divider">
 <footer>
+  <span class="visa"></span>
+  <span class="master"></span>
   <a href="#" class="to-top"></a>
+  <ul class="list-inline">
+    <li><a href="https://github.com/activebridge"><i class="fa fa-github fa-3x"></i></a></li>
+    <li><a href="https://google.com/+ActivebridgeTeam"><i class="fa fa-google-plus fa-3x"></i></a></li>
+    <li><a href="https://twitter.com/ActiveBridge"><i class="fa fa-twitter fa-3x"></i></a></li>
+    <li><a href="https://www.facebook.com/ActiveBridgeTeam"><i class="fa fa-facebook fa-3x"></i></a></li>
+    <li><a href="http://www.linkedin.com/company/5000961"><i class="fa fa-linkedin fa-3x"></i></a></li>
+  </ul>
+  <div class="copyright">Active Bridge, LLC &copy; <%= Time.now.year %>. All Rights Reserved.</div>
 </footer>
