--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -3,7 +3,7 @@
 @import 'bootstrap/theme';
 
 body {
-  padding-bottom: 40px;
+  background-color: #f7f7f7;
 }
 
 ul {
@@ -76,7 +76,7 @@ nav.fixed {
 }
 
 .featurette-divider {
-  margin: 80px 0;
+  margin: 80px 0 0 0;
 }
 
 .to-top {
@@ -114,7 +114,8 @@ nav.fixed {
   }
 }
 .wrapper {
-  background: transparent image_url('slide2.jpg') no-repeat fixed 0 0;
+  background: transparent image_url('slide1.jpg') no-repeat fixed 0 -100px;
+  background-size: cover;
 }
 #back {
   height: 200px;
@@ -122,7 +123,9 @@ nav.fixed {
 }
 
 footer {
+  background-color: #fff;
   text-align: center;
+  padding: 40px 0 40px 0;
   a {
     color: #000;
     transition: color 0.3s ease 0s;
@@ -145,7 +148,47 @@ footer {
 }
 
 .sidebar-module-inset {
-  background-color: #f5f5f5;
+  background-color: #fff;
   border-radius: 4px;
   padding: 15px;
+}
+
+hr.star-primary::after {
+  background-color: #f7f7f7;
+  color: #2c3e50;
+}
+hr.star-light::after, hr.star-primary::after {
+  content: "";
+  display: inline-block;
+  font-family: FontAwesome;
+  font-size: 2em;
+  padding: 0 0.25em;
+  position: relative;
+  top: -0.8em;
+}
+
+hr.star-primary {
+  border-color: #2c3e50;
+}
+hr.star-light, hr.star-primary {
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  border-color: -moz-use-text-color;
+  border-image: none;
+  border-style: solid none none;
+  border-width: 5px 0 0;
+  margin: 25px auto 30px;
+  max-width: 250px;
+  padding: 0;
+  text-align: center;
+}
+
+.row.title h2 {
+  font-size: 3em;
+  margin: 0;
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
 }
