--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,10 +1,10 @@
 <div id="sidebar" class="col-xs-6 col-sm-3 sidebar-offcanvas">
   <div class="sidebar-module sidebar-module-inset">
-    <h4>About</h4>
-    <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+    <h4><%= t('about.title') %></h4>
+    <p><%= t('about.description') %></p>
   </div>
   <div class="sidebar-module sidebar-module-inset">
-    <h4>Contact us</h4>
+    <h4><%= t('contacts.title') %></h4>
     <ul>
       <li>
         <a href="tel:+380977535731" class="fa fa-phone-square">
