changed footer and images

--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -114,17 +114,16 @@ nav.fixed {
   }
 }
 .wrapper {
-  background: transparent image_url('slide1.jpg') no-repeat fixed 0 -100px;
+  background: #b84d45 image_url('bg.jpg') repeat fixed 0 0;
   background-size: cover;
 }
+
 #back {
   height: 200px;
-  background: rgba(0, 0, 0, 0) url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAECAYAAACzzX7wAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAACBJREFUeNpiYGBgsAZiViSMzscrac1AQBJuAk5rAAIMAJWsAlHLAAfDAAAAAElFTkSuQmCC") repeat scroll left top;
 }
 
 footer {
   background-color: #fff;
-  text-align: center;
   padding: 40px 0 40px 0;
   a {
     color: #000;
@@ -133,12 +132,16 @@ footer {
       color: #9b59b6;
     }
   }
-  .visa {
-    background: transparent image_url('3d-secure-logos.png') no-repeat 0 0;
-    width: 554px;
-    height: 152px;
+  .visa_master_logo {
+    background: transparent image_url('3d-secure-logos2.png') no-repeat 0 0;
     display: block;
-    margin: 0 auto;
+    width: 125px;
+    height: 44px;
+    float: right;
+    margin-right: 100px;
+  }
+  .copyright {
+    line-height: 44px;
   }
 }
 
