--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
     </div>
     <% if current_order %>
       <ul class="nav navbar-nav pull-right">
+        <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
             <%= t('theme.header.lang') %>
