--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -23,6 +23,10 @@ nav.fixed {
   z-index: 3;
 }
 
+.fixed + .nav-wrap {
+  height: 72px;
+}
+
 
 .nav.navbar-nav.pull-right .basket {
   background: transparent image-url('<%= asset_path 'shopping-cart.png' %>') no-repeat right top ;
@@ -218,4 +222,45 @@ a.ajax {
 .delete.ajax {
   float: right;
   line-height: inherit;
+}
+.navbar-inverse li a.auth-button {
+  background-color: transparent;
+  border: 1px solid #c95555;
+  border-radius: 15px;
+  color: #c95555;
+  display: inline-block;
+  padding: 10px 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all 0.1s linear 0s;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-right: 5px;
+  &:hover {
+    transform: scale(0.95);
+    text-decoration: none;
+    background-color: #fc8888;
+    border-color: #fc8888;
+    color: #f6f6f6;
+  }
+  &.sign-up {
+    color: #f6f6f6;
+  }
+}
+
+#error_explanation {
+  color: #f00;
+  border: none;
+  border-radius: 5px;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+    li {
+      list-style: none;
+    }
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
 }
