--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= t('mailer.hello_message') + " #{@resource.email}" %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p><%= t('mailer.reset_password.subject') %></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token, locale: 'en') %></p>
+<p><%= link_to t('devise.links.change_pass'), edit_password_url(@resource, reset_password_token: @token, locale: I18n.locale) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= t('mailer.reset_password.warning_1') %></p>
+<p><%= t('mailer.reset_password.warning_2') %></p>
