--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= t('mailer.hello_message') + " #{@resource.email}" %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p><%= t('mailer.unlock_instructions.subject') %></p>
 
-<p>Click the link below to unlock your account:</p>
+<p><%= t('mailer.unlock_instructions.click_link') %></p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to t('mailer.unlock_instructions.unlock'), unlock_url(@resource, unlock_token: @token) %></p>
