--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -10,14 +10,14 @@
   <%= f.hidden_field :reset_password_token %>
 
   <div class="form-group">
-    <%= f.label :password, "New password", class: "col-sm-2 control-label" %>
+    <%= f.label :password, t('devise.new_pass'), class: "col-sm-2 control-label" %>
     <div class="col-sm-8">
       <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation, "Confirm new password", class: "col-sm-2 control-label" %>
+    <%= f.label :password_confirmation, t('devise.confirm_new_pass'), class: "col-sm-2 control-label" %>
     <div class="col-sm-8">
       <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
     </div>
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <div class="col-sm-8 col-sm-offset-2">
-      <%= f.submit "Change my password", class: "btn btn-primary" %>
+      <%= f.submit t('devise.links.change_pass'), class: "btn btn-primary" %>
     </div>
   </div>
 
