--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -17,7 +17,7 @@
 
   <div class="form-group">
     <div class="col-sm-8 col-sm-offset-2">
-      <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
+      <%= f.submit t('devise.links.send_reset_pass'), class: "btn btn-primary" %>
     </div>
   </div>
   <div class="form-group">
