--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,3 @@
-<h2></h2>
 <div class="row title">
   <div class="col-lg-12 text-center">
     <h2 class="title">Edit <%= resource_name.to_s.humanize %></h2>
@@ -7,6 +6,34 @@
 </div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
   <%= devise_error_messages! %>
+
+  <div class="form-group">
+    <%= f.label :first_name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+      <%= f.text_field :first_name, class: "form-control", autofocus: true %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :last_name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+      <%= f.text_field :last_name, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :address, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+      <%= f.text_field :address, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :phone, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+      <%= f.text_field :phone, class: "form-control" %>
+    </div>
+  </div>
 
   <div class="form-group">
     <%= f.label :email, class: 'col-sm-2 control-label'  %>
@@ -50,8 +77,8 @@
   </div>
 <% end %>
 
-<h5>Cancel my account</h5>
+<h5><%= t('devise.cancel_account') %></h5>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-default btn-xs' %></p>
+<p>Unhappy? <%= button_to t('devise.cancel_account'), registration_path(resource_name), data: { confirm: t('devise.sure') }, method: :delete, class: 'btn btn-default btn-xs' %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to t('devise.back'), :back %>
