--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,35 @@
   </div>
 </div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal'}) do |f| %>
-  <%= devise_error_messages! %>
+  <%= render 'devise/shared/error_messages', object: f.object %>
+
+  <div class="form-group">
+    <%= f.label :first_name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+      <%= f.text_field :first_name, class: "form-control", autofocus: true %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :last_name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+      <%= f.text_field :last_name, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :address, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+      <%= f.text_field :address, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :phone, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+      <%= f.text_field :phone, class: "form-control" %>
+    </div>
+  </div>
 
   <div class="form-group">
     <%= f.label :email, class: "col-sm-2 control-label" %>
@@ -30,7 +58,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-8">
-      <%= f.submit "Sign up", class: "btn btn-primary" %>
+      <%= f.submit t('devise.links.sign_up'), class: "btn btn-primary" %>
     </div>
   </div>
 
