--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
 <div class="container main">
   <div class="row row-offcanvas row-offcanvas-right">
     <div class="col-xs-12 col-sm-9">
-      <% flash.each do |key, value|%>
-        <div class="alert alert-<%= key %>">
+      <% flash.each do |_, value|%>
+        <div class="alert alert-success">
           <%= value %>
         </div>
       <% end %>
