checkout first page

--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -207,3 +207,15 @@ p {
   -moz-hyphens: auto;
   hyphens: auto;
 }
+.change_qt {
+  float: right;
+}
+a.ajax {
+  &:hover {
+    text-decoration: none;
+  }
+}
+.delete.ajax {
+  float: right;
+  line-height: inherit;
+}
