--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -1,5 +1,5 @@
   <h2><%= t('titles.checkout') %></h2>
-  <%= render 'items', :order => @order %>
+  <%= render 'shared/order_items', :order => @order %>
   <div class="row">
     <div class="col-lg-4"></div>
     <div class="col-lg-4">
