--- a/app/views/orders/confirmation.html.erb
+++ b/app/views/orders/confirmation.html.erb
@@ -1,3 +1,3 @@
 <h2><%= t('titles.place_order') %></h2>
-<%= render 'items', :order => current_order %>
+<%= render 'shared/order_items', :order => current_order %>
 <%= button_to t('buttons.place_order')%>
