--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,3 +1,3 @@
 <h2><%= t('titles.basket') %></h2>
-<%= render 'items', :order => current_order %>
+<%= render 'shared/order_items', :order => current_order %>
 <p><%= link_to t('buttons.empty_basket'), basket_path, class: 'btn btn-danger', :method => :delete %></p>
