checkout first page

--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -195,3 +195,15 @@ hr.star-light, hr.star-primary {
   font-weight: 700;
   text-transform: uppercase;
 }
+.change_qt {
+  float: right;
+}
+a.ajax {
+  &:hover {
+    text-decoration: none;
+  }
+}
+.delete.ajax {
+  float: right;
+  line-height: inherit;
+}
