--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -264,3 +264,16 @@ a.ajax {
 .field_with_errors {
   @extend .has-error;
 }
+div.customer fieldset dd.name {
+  input {
+    float: left;
+  }
+}
+input#order_first_name {
+  margin-right: 15px;
+}
+.bill-address {
+  input, select {
+    margin-bottom: 25px;
+  }
+}
