--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -1,13 +1,12 @@
-  <h2><%= t('titles.checkout') %></h2>
+  <div class="row title">
+    <div class="col-lg-12 text-center">
+      <h2><%= t('titles.checkout') %></h2>
+      <hr class="star-primary">
+    </div>
+  </div>
   <%= render 'shared/order_items', :order => @order %>
   <div class="row">
-    <div class="col-lg-4"></div>
     <div class="col-lg-4">
-      <form method="POST" accept-charset="utf-8" action="https://www.liqpay.com/api/checkout">
-        <input type="hidden" name="data" value="eyJ2ZXJzaW9uIjozLCJwdWJsaWNfa2V5IjoiaTkwODQzMDYxMTYzIiwiYW1vdW50IjoiMTAwMCIsImN1cnJlbmN5IjoiVVNEIiwiZGVzY3JpcHRpb24iOiLQnNC+0Lkg0YLQvtCy0LDRgCIsInR5cGUiOiJidXkiLCJzYW5kYm94IjoiMSIsImxhbmd1YWdlIjoiZW4iLCJwYXlfd2F5IjoiY2FyZCxsaXFwYXksZGVsYXllZCxpbnZvaWNlLHByaXZhdDI0In0=" />
-        <input type="hidden" name="signature" value="4+aPfAGpnf4MCEeeDZwAZi3vT3k=" />
-        <input type="image" src="//static.liqpay.com/buttons/p1en.radius.png" name="btn_text" />
-      </form>
+      <%= link_to t('buttons.continue_co'), checkout_confirmation_path, class: 'btn btn-success' %>
     </div>
-    <div class="col-lg-4"></div>
   </div>
