added modal and contract offer

--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -277,3 +277,15 @@ input#order_first_name {
     margin-bottom: 25px;
   }
 }
+
+#error_modal .modal-header {
+  border-bottom: none;
+  background-color: #97a7b0;
+  .close {
+    position: absolute;
+    right: 15px;
+    top: 5px;
+    color: #fff;
+    opacity: 1;
+  }
+}
