--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,7 @@
     <div class="copyright">
       <p>
         LifeSaverSoft &copy; <%= Time.now.year %>, All Rights Reserved.
+        <%= link_to t('theme.footer.contract_offer'), proposal_path %>
         <span class="visa_master_logo"></span>
       </p>
     </div>
