--- a/app/views/shared/_confirm_details.html.erb
+++ b/app/views/shared/_confirm_details.html.erb
@@ -100,5 +100,38 @@
       </div>
     </div>
   </div>
-  <%= button_to t('buttons.place_order'), nil, class: 'btn btn-success btn-lg btn-block'%>
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel"><%= t('titles.modal_confirm') %></h4>
+        </div>
+        <div class="modal-body">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" id="agree-proposal">
+             <%= t('public_proposal.agreement') %> <%= link_to t('public_proposal.are_you_agree'), proposal_path %>
+            </label>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary" id="confirm"><%= t('public_proposal.confirm') %></button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="error_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        </div>
+        <div class="modal-body">
+          <p class="text-center"><%= t('public_proposal.not_confirmed') %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <%= link_to t('buttons.place_order'), '#', class: 'btn btn-success btn-lg btn-block', data: { toggle: 'modal', target: '#myModal' } %>
 <% end %>
